# s-mail-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: mod.rs
src/constants/: mod.rs
src/errors/: mod.rs
src/handlers/: email.rs  file_builder.rs  mod.rs
src/security/: mod.rs
src/store/: mod.rs
src/utils/: mod.rs
