[package]
name = "smail"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Bocar Wane"]
description = "Cli tool to easily send emails with attachments"
repository = "https://github.com/bocarw121/s-mail-cli.git"
categories = ["command-line-utilities", "command-line-interface", "email"]
keywords = ["email", "attachments", "cli"]
homepage = "https://github.com/bocarw121/s-mail-cli.git"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
lettre = "0.11.15"
redis = "0.29.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
rand_core = { version = "0.6", features = ["std"] }
colored = "2.0.4"
